# autovibe-gym

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.sandbox  README.md  SKILL.md  docker-compose.yml  pyproject.toml  requirements.txt
dashboard/: AGENT_NOTES.md  README.md
datasets/: README.md
docs/: ARCHITECTURE_DECISIONS.md  EXPERIMENT_REPORT.md  GIT_WORKFLOW.md  PROJECT.md  PROTOCOL.md  RELEASE_CHECKLIST.md  REPRODUCIBILITY.md  STATUS.md  TECHNICAL_TODO.md  TZ.md  datasets.md
experiments/: compare.py  dashboard_artifacts.py  mlflow_config.py  models.py  modes.py  run.py  run_all_modes_matrix.py  run_baseline.py  run_fixed.py  run_gym.py  run_matrix.py  run_multishot.py
gym/: __init__.py  agent.py  candidates.py  cell_history.py  checklist.py  data_profile.py  dataset_ingestion.py  datasets.py  env.py  executor.py  feedback.py  jupyter_kernel.py  llm.py  model_config.py  modes.py  notebook.py  notebook_env.py  prompts.py  protocol.py  run_summary.py  scoring.py  tabular_io.py  workspace.py
scripts/: prepare_datasets.py  server_setup.sh  start_vllm.sh  verify_docker_sandbox.py
tests/: test_agent.py  test_agent_prompt_override.py  test_cell_history.py  test_checklist.py  test_dashboard.py  test_dashboard_dataset_store.py  test_dashboard_launcher_prompt.py  test_dashboard_prompt_store.py  test_dashboard_prompts_api.py  test_data_profile.py  test_dataset_pipeline.py  test_env.py  test_env_protocol.py  test_episode_modes.py  test_executor.py  test_experiments.py  test_jupyter_kernel.py  test_llm.py  test_notebook_document.py  (+5 more)
(+82 files in other folders)
