[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autovibe-gym"
version = "0.1.0"
description = "LLM-powered AutoML Gym environment for iterative tabular ML agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Daniil Skazhutin" },
]
dependencies = [
  "openai>=1.40.0",
  "google-genai>=1.0.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.0",
  "pandas>=2.0.0",
  "numpy>=1.26.0",
  "cloudpickle>=3.0",
  "scikit-learn>=1.4.0",
  "xgboost>=2.0.0",
  "lightgbm>=4.0.0",
  "mlflow>=2.14.0",
  "openpyxl>=3.1.0",
  "nbformat>=5.10.0",
  "nbclient>=0.10.0",
  "jupyter_client>=8.6.0",
  "ipykernel>=6.29.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]
server = [
  "vllm>=0.5.0",
]
diagnostics = [
  "ydata-profiling>=4.8",
  "cleanlab>=2.7",
  "optuna>=3.0",
]

[tool.setuptools.packages.find]
include = ["gym*", "experiments*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: end-to-end tests requiring external services (Docker, network)",
]
